--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-        <img src="images/arrow.png" width="130px">
+        <img src="arrow.png" width="130px">
 
     <div id="list2"> MENU
         <div>
